# options-helper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEX_TASK_PROMPT.md  FEATURE_IDEAS.md  FIB_RETRACEMENT-PLAN.md  PRD.md  README.md  STRATEGY_MODELING_TRADE_REVIEW_IMPROVED-PLAN.md  STREAMLIT_LIVE_PORTFOLIO-PLAN.md  coverage-first-class-plan.md  mkdocs.yml  package.json  pyproject.toml  sfp-msb-strategy-modeling-plan.md  spxw-0dte-put-study-plan.md
.github/: AGENTS.md
.github/workflows/: ci.yml  docs.yml
THIRD_PARTY_NOTICES/: ATTRIBUTION.md
apps/: AGENTS.md
apps/dagster/: AGENTS.md
apps/streamlit/: AGENTS.md  streamlit_app.py
config/: AGENTS.md  alpaca.env.example  confluence.schema.json  confluence.yaml  technical_backtesting.schema.json  technical_backtesting.yaml
docs/: AGENTS.md  ALPACA_RATE_LIMITS.md  ALPACA_SPXW.md  ARTIFACT_SCHEMAS.md  AUTOMATION.md  BACKLOG.md  BACKTESTING.md  BRIEFING.md  CANDLE_CACHE.md  CHAIN_REPORT.md  COMPARE.md  CONFLUENCE_SCORE.md  COVERAGE.md  DAGSTER_OPTIONAL.md  DASHBOARD.md  DEALER_EXPOSURE.md  DERIVED.md  DIAGRAMS.md  DOCS_SITE.md  DUCKDB.md  EARNINGS.md  EVENTS.md  INGEST.md  INGEST_OPTIMIZATION.md  INTRADAY.md  INTRADAY_BACKFILL.md  INTRADAY_FLOW.md  IV_SURFACE.md  JOURNAL.md  LEVELS.md  LLM_LOOP_PROMPT.md  LOGGING.md  MARKET_ANALYSIS.md  MKDOCS_NAV_PATCH.md  MULTI_LEG.md  NEXT_STAGE_VISIBILITY_PORTAL.md  OBSERVABILITY.md  OPTIONS_FLOW.md  PERFORMANCE_ARCHITECTURE.md  PORTAL_LIVE_STREAMING.md  (+25 more)
docs/plan/: AGENTS.md  DUCKDB-ALPACA-INGEST-PLAN.md  VISIBILITY-PORTAL-ORCHESTRATION-PLAN.md  alpaca-research-metrics-plan.md
docs/plans/: EPIC-ALPACA.md  (+45 more)
options_helper/: AGENTS.md  __main__.py  cli.py  cli_deps.py  models.py  observability.py  reporting.py  reporting_briefing.py  reporting_chain.py  reporting_roll.py  storage.py  watchlists.py
scripts/: AGENTS.md  cron_check_scanner_full.sh  cron_daily_briefing.sh  cron_daily_monitor_options_snapshot.sh  cron_daily_options_snapshot.sh  cron_daily_scanner_full.sh  cron_intraday_capture.sh  cron_offline_report_pack.sh  cron_stream_capture.sh  cron_weekly_refresh_earnings.sh  debt_guardrails.py  install_cron_daily_briefing.sh  install_cron_daily_monitor_options_snapshot.sh  install_cron_daily_options_snapshot.sh  install_cron_daily_scanner_full.sh  install_cron_intraday_capture.sh  install_cron_offline_report_pack.sh  install_cron_weekly_refresh_earnings.sh  render_diagrams.mjs  validate_mean_reversion_reference.py  wait_for_daily_candle_date.py
tests/: AGENTS.md  technical_backtesting_helpers.py  test_advice.py  test_alpaca_client.py  test_alpaca_contracts_cache.py  test_alpaca_contracts_fetch.py  test_alpaca_intraday_bars_mapping.py  test_alpaca_list_expiries.py  test_alpaca_option_bars_daily_full.py  test_alpaca_option_chain_mapping.py  test_alpaca_option_volume_join.py  test_alpaca_rate_limits.py  test_alpaca_recent_bars_buffer.py  test_alpaca_stocks.py  test_alpaca_symbols.py  test_alpaca_trade_update_normalizers.py  test_analyze_cli.py  test_analyze_offline.py  test_artifact_fixtures.py  test_artifact_schemas.py  test_automation_docs_schedule_table.py  test_backtest_cli.py  test_backtesting_execution.py  test_backtesting_ledger.py  test_backtesting_marks.py  test_backtesting_roll.py  test_backtesting_runner.py  test_backtesting_strategy.py  test_briefing_cli.py  test_briefing_technicals_confluence.py  test_candles_cache.py  test_chain_metrics_spread.py  test_chain_report_cli.py  test_cli_contract.py  test_cli_log_path.py  test_cli_logging.py  test_command_run_ledger_instrumentation.py  test_compare_cli.py  test_confluence_config.py  test_confluence_score.py  (+157 more)
(+440 files in other folders)
