[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-helper"
version = "0.1.0"
description = "CLI tool to analyze an options portfolio using yfinance data."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "options-helper contributors" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "duckdb",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "rich>=13.0",
  "ta>=0.11",
  "backtesting>=0.3",
  "typer>=0.9",
  "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "mypy>=1.8",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]
alpaca = [
  "alpaca-py>=0.30.0",
]

[project.scripts]
options-helper = "options_helper.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["options_helper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
files = ["options_helper/observability.py"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
